--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,7 @@ body, html {
     margin: 0;
     padding: 0;
     height: 100%;
+    overflow: hidden;
 }
 
 /* Centering container for garden image */
